# XHSK-Home

./: .gitignore  Build.hs  LICENSE  README.md  Setup.hs  XHSK-Home.cabal  boot.sh  test.ps1
maintain/: Main.hs  MaintainData.hs
src/: Config.hs  Frame.hs  Loint.hs  Main.hs  Pages.hs  SvgImg.hs  UnSafe.hs  Utils.hs
src/Common/: Header.hs  HeaderMaintain.hs
src/Pages/: Document.hs  Donate.hs  Home.hs  Null.hs
