name:                XHSK-Home
version:             0.0.15
synopsis:            Xidian Hackage Server Keeper
description:         The home of XHSK
homepage:            https://github.com/Xidian-Haskell-Server-Keeper/XHSK-Home
license:             BSD3
license-file:        LICENSE
author:              XHSK
maintainer:          qinka@live.com
category:            Web
build-type:          Simple
cabal-version:       >=1.12

executable           XHSK-Home.Bin
  main-is:             Main.hs
  default-language:    Haskell2010
  -- other-modules:
  build-depends:       base
                     , wai
                     , warp
                     , http-types
                     , resourcet
                     , scotty
                     , text
                     , bytestring
                     , blaze-html
                     , blaze-markup
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     --, persistent-postgresql
                     , monad-logger
                     , heroku
                     , transformers
                     , wai-middleware-static
                     , wai-extra
                     , time
                     , clay
  hs-source-dirs:    src
